css/globals/header.css
.navbar {
    width: 100%;
    max-width: 100%;
    margin: 85px auto; 
    position: fixed;
    top: 0;
    transition: top 0.3s;
}

.nav {  
    width: 100%;
    max-width: 100%;
    margin: 0;
    padding: 0 16px; 
    justify-content: center;
    }

.navbar__item-list {
    width: 40%;
    max-width: 100%;
    flex-wrap: wrap;   
    padding-left: 0; 
}
 
.nav__link {
    color: #FFFFFF;
}

.visited {
    opacity: 50%;
}

.hamburger__menu-icon {
    width: 36px;
    height: 36px;
}

.hamburger__menu {
    background: transparent; 
    border: none; 
    cursor: pointer; 
    display: none;
    justify-content: center;
    align-items: center;
    padding: 0;  
}


@media (max-width: 768px) {
    .navbar {
        margin: 0px auto;
    }


    .hamburger__menu {
        display: flex;
    }

    .navbar__item-list {
        width: 100%;
    }

    .nav__link {
        display: none;
    }

    /* Temporary option for mobile*/
    .visited {
        opacity: 100%;
    }
}

